jugnoo_dev_papa: xml fixes in earnings

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
@@ -22,7 +22,7 @@
 
             <TextView
                 android:id="@+id/textViewBankDeposite"
-                android:layout_width="460px"
+                android:layout_width="wrap_content"
                 android:layout_height="45px"
                 android:gravity="center_vertical"
                 android:text="@string/bank_deposite"
@@ -34,6 +34,7 @@
                 android:id="@+id/textViewBankDepositeValue"
                 android:layout_width="140px"
                 android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/textViewBankDeposite"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical|right"
                 android:text="0000.00"
@@ -49,7 +50,7 @@
 
             <TextView
                 android:id="@+id/textViewCustomerPaidText"
-                android:layout_width="460px"
+                android:layout_width="wrap_content"
                 android:layout_height="45px"
                 android:gravity="center_vertical"
                 android:text="@string/cash_collected"
@@ -57,6 +58,7 @@
                 android:textSize="34px"/>
             <TextView
                 android:id="@+id/textViewCustomerPaid"
+                android:layout_toRightOf="@id/textViewCustomerPaidText"
                 android:layout_width="140px"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -81,23 +83,24 @@
 
             <TextView
                 android:id="@+id/textViewActualFareText"
-                android:layout_width="440px"
+                android:layout_width="wrap_content"
                 android:layout_height="74px"
                 android:gravity="center_vertical"
                 android:text="@string/your_income"
                 android:textColor="@color/black"
-                android:textSize="40px"/>
+                android:textSize="38px"/>
 
 
             <TextView
                 android:id="@+id/textViewActualFareValue"
-                android:layout_width="160px"
+                android:layout_width="wrap_content"
                 android:layout_height="74px"
+                android:layout_toRightOf="@id/textViewActualFareText"
                 android:layout_alignParentRight="true"
                 android:gravity="center_vertical|right"
                 android:text="0000.00"
                 android:textColor="@color/black"
-                android:textSize="40px"/>
+                android:textSize="38px"/>
 
         </RelativeLayout>
 
