jingos_driver_fork: Visibility of refer and earn done

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -530,6 +530,7 @@
                 android:id="@+id/inviteFriendRl"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
+                android:visibility="@integer/show_refer_earn"
                 android:background="@drawable/background_tranparend_red_v2_selector"
                 android:splitMotionEvents="false">
 
