--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_share_enter_number.xml
@@ -50,7 +50,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:includeFontPadding="false"
-                    android:text="+91"
+                    android:text=""
+                    android:hint="@string/code"
                     android:textColor="@color/text_color"
                     android:textSize="17sp"
                     android:drawableEnd="@drawable/ic_arrow_down_vector"
