--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -157,7 +157,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:includeFontPadding="false"
-                        android:text="+91"
+                        android:text=""
+                        android:hint="@string/code"
                         android:layout_marginStart="10dp"
                         android:textColor="@color/text_color"
                         android:textSize="17sp"
