--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -30,7 +30,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text="+91"
+                android:text=""
+                android:hint="@string/code"
                 android:textColor="@color/text_color"
                 android:textSize="17sp"
                 android:layout_marginStart="5dp"
