onboarding_revamp: Kotlin setup & xmls added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/edittext_background.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/edittext_background.xml
@@ -12,8 +12,8 @@
         />
     
     <stroke 
-        android:width="1px" 
-        android:color="#999999"
+        android:width="0.5dp"
+        android:color="#bcbcbc"
         />
     
     
