--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
@@ -335,21 +335,36 @@
             android:orientation="vertical"
             android:gravity="center_horizontal"
             android:tag="@string/dont_touch_me"
-            android:visibility="gone"
+            android:visibility="visible"
             >
 
             <TextView
+                android:id="@+id/tvPlaceBid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/place_bid"
                 android:textSize="14sp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
                 />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                >
+                <TextView
+                    android:id="@+id/tvPlaceBidCurrency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    />
 
             <EditText
                 android:id="@+id/etPlaceBid"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_white_rounded_bordered"
                 android:padding="4dp"
@@ -363,9 +378,12 @@
                 android:hint="00.00"
                 />
 
+            </LinearLayout>
+
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/rlAcceptCancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20px"
