--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -42,8 +42,7 @@
                 android:paddingStart="5dp"
                 android:paddingEnd="5dp"
                 android:tag="@string/dont_touch_me"
-                android:layout_centerVertical="true"
-                />
+                android:layout_centerVertical="true" />
 
             <AutoCompleteTextView
                 android:id="@+id/phoneNoOPTEt"
