--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -231,7 +231,7 @@
             android:layout_marginTop="52px"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:visibility="gone"
+            android:visibility="visible"
             android:splitMotionEvents="false"
             >
 
@@ -268,7 +268,7 @@
             android:text="@string/login"
             android:textColor="@color/red_v2"
             android:textSize="@dimen/button_text_size"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
 
     </LinearLayout>
