--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
@@ -46,32 +47,30 @@
         android:layout_marginStart="5dp"
         android:drawableEnd="@drawable/ic_arrow_down_vector"
         android:drawablePadding="3dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:tag="@string/dont_touch_me"
-        android:layout_centerVertical="true" />
-
+        android:padding="8dp"/>
 
 
     <EditText
         android:id="@+id/edt_phone"
-        android:layout_width="wrap_content"
-        android:maxLines="1"
-        android:drawablePadding="5dp"
-        android:padding="8dp"
-        android:inputType="phone"
-        android:textColor="@color/text_color_splash"
-        android:hint="@string/hint_edt_phone"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/edittext_background"
-        app:layout_constraintLeft_toRightOf="@id/tvCountryCodeL"
-        android:layout_height="wrap_content" />
+        android:drawablePadding="5dp"
+        android:hint="@string/hint_edt_phone"
+        android:inputType="phone"
+        android:maxLines="1"
+        android:padding="8dp"
+        android:textSize="17sp"
+        android:textColor="@color/text_color_splash"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvCountryCodeL"
+        app:layout_constraintTop_toBottomOf="parent" />
 
 
     <Button
+        android:id="@+id/btn_gen_otp"
         android:minWidth="90dp"
         android:layout_marginTop="20dp"
         android:text="@string/btn_text_OTP"
