--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_otp_confirm.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_otp_confirm.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/layout_heading" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_resend_otp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -84,10 +84,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_resend_otp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_call"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
