--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -1,86 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:scrollbars="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:paddingLeft="14dp"
-    android:paddingRight="14dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:paddingRight="14dp">
 
 
-    <ImageView
-        android:contentDescription="@string/cd_jugnoo_logo"
-        app:layout_constraintBottom_toTopOf="@+id/label_edt_phone"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintLeft_toRightOf="parent"
-        android:layout_marginBottom="50dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:contentDescription="@string/cd_jugnoo_logo"
+            android:src="@drawable/splash_driver_logo"
+            app:layout_constraintBottom_toTopOf="@+id/label_edt_phone"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="parent" />
 
-    <TextView
-        android:id="@+id/label_edt_phone"
-        app:layout_constraintBottom_toTopOf="@+id/edt_phone"
-        app:layout_constraintLeft_toRightOf="parent"
-        android:layout_marginBottom="10dp"
-        app:layout_goneMarginBottom="5dp"
-        android:text="@string/label_edt_phone"
-        android:textColor="@color/text_color_splash_heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-    <TextView
-        android:id="@+id/tvCountryCodeL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
-        android:background="@drawable/edittext_background"
-        app:layout_constraintLeft_toRightOf="parent"
-        android:includeFontPadding="false"
-        android:text=""
-        android:hint="@string/code"
-        android:textColor="@color/text_color"
-        android:textSize="17sp"
-        android:layout_marginStart="5dp"
-        android:drawableEnd="@drawable/ic_arrow_down_vector"
-        android:drawablePadding="3dp"
-        android:padding="8dp"/>
+        <TextView
+            android:id="@+id/label_edt_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="@string/label_edt_phone"
+            android:textColor="@color/text_color_splash_heading"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/layout_phone"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_goneMarginBottom="5dp" />
 
 
-    <EditText
-        android:id="@+id/edt_phone"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/edittext_background"
-        android:drawablePadding="5dp"
-        android:hint="@string/hint_edt_phone"
-        android:inputType="phone"
-        android:maxLines="1"
-        android:padding="8dp"
-        android:textSize="17sp"
-        android:textColor="@color/text_color_splash"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvCountryCodeL"
-        app:layout_constraintTop_toBottomOf="parent" />
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/layout_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edittext_background"
+            android:padding="12dp"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.55">
+
+            <TextView
+                android:id="@+id/tvCountryCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:drawableEnd="@drawable/ic_arrow_down_vector"
+                android:drawablePadding="3dp"
+                android:hint="@string/code"
+                android:includeFontPadding="false"
+                android:text=""
+                android:textColor="@color/text_color"
+                android:textSize="17sp"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="parent" />
 
 
-    <Button
-        android:id="@+id/btn_gen_otp"
-        android:minWidth="90dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/btn_text_OTP"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:textColor="@android:color/white"
-        android:background="@drawable/orange_btn_selector"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</android.support.constraint.ConstraintLayout>
+            <EditText
+                android:id="@+id/edt_phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:background="@null"
+                android:drawablePadding="5dp"
+                android:hint="@string/hint_edt_phone"
+                android:inputType="phone"
+                android:maxLines="1"
+                android:textColor="@color/text_color_splash"
+                android:textSize="17sp"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
+                app:layout_constraintTop_toBottomOf="parent" />
+
+
+        </android.support.constraint.ConstraintLayout>
+
+
+        <Button
+            android:id="@+id/btn_gen_otp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/orange_btn_selector"
+            android:minWidth="90dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="@string/btn_text_OTP"
+            android:textColor="@android:color/white"
+            app:layout_constraintLeft_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layout_phone" />
+    </android.support.constraint.ConstraintLayout>
+
+</android.support.v4.widget.NestedScrollView>
