--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_otp_confirm.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_otp_confirm.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,9 +33,11 @@
             app:layout_constraintRight_toLeftOf="parent" />
 
         <TextView
+            android:id="@+id/label_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:drawablePadding="5dp"
             android:drawableEnd="@drawable/ic_otp_edit_number_selector"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +72,7 @@
         android:focusable="true"
         android:text="@string/resend_OTP"
         android:textColor="@color/new_orange"
-        android:textSize="13sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,3 +111,5 @@
 
 
 </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
+
