--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request_new.xml
@@ -360,6 +360,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:padding="4dp"
                     />
 
             <EditText
@@ -374,7 +375,6 @@
                 android:gravity="center_horizontal"
                 android:inputType="numberDecimal"
                 android:maxLength="10"
-                android:layout_marginBottom="5dp"
                 android:hint="00.00"
                 />
 
