--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/circle_white_dark_stroke_grey.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/circle_white_dark_stroke_grey.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
 
-    <stroke android:color="@color/theme_color"
+    <stroke android:color="@color/darker_grey_v2"
             android:width="1dp"/>
 
-    <solid android:color="@color/white" />
+    <solid android:color="@color/white_light_more_grey" />
 
 </shape>
