--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1,8 +1,8 @@
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawerLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="720px"
-    android:layout_height="1134px">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -199,7 +199,11 @@
                 android:divider="@color/transparent"
                 android:background="@color/black_translucent"
                 android:splitMotionEvents="false"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:focusableInTouchMode="false"
+                android:focusable="false"
+                android:descendantFocusability="afterDescendants"
+                />
 
         </RelativeLayout>
 
