--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -18,19 +18,19 @@
     </style>
 
 
-    <style name="CustomRatingBar" parent="@android:style/Widget.RatingBar">
+    <style name="CustomRatingBar" parent="android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/star_rating_bar_full</item>
         <item name="android:minHeight">56dip</item>
         <item name="android:maxHeight">56dip</item>
     </style>
 
-    <style name="RatingBarBlue" parent="@android:style/Widget.RatingBar">
+    <style name="RatingBarBlue" parent="android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/driver_ratting_star_orange_selector</item>
         <item name="android:minHeight">56dp</item>
         <item name="android:maxHeight">56dp</item>
     </style>
 
-    <style name="RatingBarWhite" parent="@android:style/Widget.RatingBar">
+    <style name="RatingBarWhite" parent="android:style/Widget.RatingBar">
         <item name="android:progressDrawable">@drawable/rating_star_white_selector</item>
         <item name="android:minHeight">50dp</item>
         <item name="android:maxHeight">50dp</item>
@@ -41,8 +41,8 @@
     <style name="Animations"/>
 
     <style name="Animations.LoadingDialogFade">
-        <item name="@android:windowEnterAnimation">@anim/fade_in</item>
-        <item name="@android:windowExitAnimation">@anim/fade_out</item>
+        <item name="android:windowEnterAnimation">@anim/fade_in</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
     </style>
 
     <style name="AudioFileInfoOverlayText">
