--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -471,7 +471,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="84px"
                 android:background="@drawable/background_tranparend_red_v2_selector"
-                android:splitMotionEvents="false">
+                android:splitMotionEvents="false"
+                android:visibility="gone"
+                >
 
                 <ImageView
                     android:id="@+id/imageViewChatSupportIcon"
