--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_help.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_help.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative"
     android:layout_width="720px"
     android:layout_height="1134px"
@@ -36,6 +36,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/topRl"
+        android:layout_above="@+id/layout_confirmation"
         android:gravity="center_horizontal"
         android:splitMotionEvents="false" 
         >
@@ -77,7 +79,7 @@
             
             
         
-        <TextView
+     <TextView
         android:id="@+id/textViewInfoDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -93,4 +95,40 @@
         
     </RelativeLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:id="@+id/layout_confirmation"
+        android:visibility="gone"
+        android:orientation="horizontal"
+        android:tag="@string/dont_touch_me"
+        android:layout_width="match_parent"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:layout_height="wrap_content">
+
+
+        <Button
+            android:id="@+id/btn_disagree"
+            android:background="@drawable/orange_btn_selector"
+            android:text="@string/dont_agree"
+            android:textAllCaps="true"
+            android:layout_marginRight="10dp"
+            android:textColor="@drawable/white_color_selector"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/btn_agree"
+            android:background="@drawable/orange_btn_selector"
+            android:text="@string/i_agree"
+            android:layout_marginLeft="10dp"
+            android:textColor="@drawable/white_color_selector"
+            android:layout_width="0dp"
+            android:textAllCaps="true"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
+</RelativeLayout>
