--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -300,6 +300,17 @@
         android:layout_centerVertical="true"
         android:background="@color/darker_grey_v2"/>
 
+        <TextView
+            android:id="@+id/textViewSpecialInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="28px"
+            android:padding="15px"
+            android:visibility="gone"
+            />
+
+
         <RelativeLayout
             android:id="@+id/relativeLayoutDriverReferralHeading"
             android:layout_width="match_parent"
