--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login_test.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login_test.xml
@@ -14,6 +14,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/background_white_rounded_orange_bordered"
+        android:padding="4dp"
         android:popupBackground="@drawable/background_white_rounded_orange_bordered"
         android:textAlignment="center"
         android:visibility="visible"
@@ -33,8 +35,6 @@
         app:layout_constraintVertical_bias="0.65"/>
 
 
-
-
     <android.support.constraint.Guideline
         android:id="@+id/glPhone"
         android:layout_width="wrap_content"
@@ -48,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="@string/label_edt_phone"
+        android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@+id/background"
         app:layout_constraintEnd_toEndOf="@+id/background"
         app:layout_constraintHorizontal_bias="0.0"
@@ -69,40 +70,42 @@
         android:id="@+id/tvCountryCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp"
         android:drawableEnd="@drawable/ic_arrow_down_vector"
         android:drawablePadding="3dp"
         android:hint="@string/code"
         android:includeFontPadding="false"
         android:text=""
         android:textColor="@color/text_color"
-        android:textSize="17sp"
+        android:textSize="16sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/edtPhoneNo"
         app:layout_constraintStart_toStartOf="@id/background"
         app:layout_constraintTop_toTopOf="@id/glPhone"/>
 
     <EditText
         android:id="@+id/edtPhoneNo"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
         android:background="@null"
         android:drawablePadding="4dp"
         android:hint="@string/hint_edt_phone"
         android:inputType="phone"
         android:maxLines="1"
+        android:padding="2dp"
         android:textColor="@color/text_color_splash"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/background"
         app:layout_constraintStart_toEndOf="@+id/tvCountryCode"
-        app:layout_constraintTop_toTopOf="@id/tvCountryCode"/>
+        app:layout_constraintTop_toTopOf="@id/background"/>
 
     <Space
         android:id="@+id/space"
         android:layout_width="wrap_content"
         android:layout_height="10dp"
-        app:layout_constraintTop_toBottomOf="@id/tvCountryCode"/>
+        app:layout_constraintTop_toBottomOf="@+id/edtPhoneNo"/>
 
 
     <Button
