--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
@@ -12,12 +12,42 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@color/black_top_bar_bg"
+            android:textAlignment="center"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_collapseMode="pin"
-            app:titleTextColor="@color/white"/>
+            app:titleTextColor="@color/white">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/btBackToolbar"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:background="@drawable/back_btn_selector"
+                    android:tag="mwar"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/tvToolbar"/>
+
+                <TextView
+                    android:id="@+id/tvToolbar"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:gravity="center"
+                    android:textAllCaps="true"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
